--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ footer a:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
 ul {
+  font-size: 0.8rem;
   border: 1px solid #e0e0e0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
